--- a/default_ec.cfg
+++ b/default_ec.cfg
@@ -1,4 +1,4 @@
-	NETWORK=10.8.0.0
+NETWORK=10.8.0.0
 NETMASK=255.255.255.0
 SERVER_PORT=1194
 CANONICAL=
@@ -9,7 +9,7 @@ HASH_ALGO="auth sha512"
 GATEWAY="redirect-gateway def1"
 SUBNET="Disable"
 LAN_SUBNET="Enable"
-COMP_LZO="comp-lzo adaptive"
+COMP_LZO="compress lz4-v2"
 IPP="ipp.txt"
 DHCP_1="dhcp-option DNS"
 TELNET_CONSOLE="No"
