--- a/default.cfg
+++ b/default.cfg
@@ -1,12 +1,12 @@
-	NETWORK=10.8.0.0
+NETWORK=10.8.0.0
 NETMASK=255.255.255.0
 SERVER_PORT=1194
 CANONICAL=
 PROTOCOL=udp
-CIPHER="cipher AES-256-GCM"
+CIPHER="cipher aes-256-cbc"
 CLIENT=""
 HASH_ALGO="auth sha512"
-GATEWAY="redirect-gateway def1"
+GATEWAY="Disable"
 SUBNET="Disable"
 LAN_SUBNET="Enable"
 COMP_LZO="comp-lzo adaptive"
@@ -15,4 +15,4 @@ DHCP_1="dhcp-option DNS"
 TELNET_CONSOLE="No"
 VERB="verb 3"
 IP_PORT_SHARE=""
-TLSENCRYPT="tls-crypt"
+TLSENCRYPT="tls-auth"
