--- a/default.cfg
+++ b/default.cfg
@@ -1,6 +1,6 @@
-	NETWORK=10.8.0.0
+POOL=
 NETMASK=255.255.255.0
-SERVER_PORT=1194
+SERVER_PORT=1190
 CANONICAL=
 PROTOCOL=udp
 CIPHER="cipher AES-256-GCM"
@@ -11,7 +11,11 @@ SUBNET="Disable"
 LAN_SUBNET="Enable"
 COMP_LZO="comp-lzo adaptive"
 IPP="ipp.txt"
-DHCP_1="dhcp-option DNS"
+DNS_1="dhcp-option DNS"
+DNS_2="dhcp-option DNS"
+DNS_3="dhcp-option DNS"
+WINS=""
+DOMAIN=""
 TELNET_CONSOLE="No"
 VERB="verb 3"
 IP_PORT_SHARE=""
