USE tun instead tap 3/3

--- a/openvpnserver/openvpnserver.cfg
+++ b/openvpnserver/openvpnserver.cfg
@@ -1,7 +1,7 @@
 # openvpnserver plugin configuration file
-NETWORK=10.8.0.0
 NETMASK=255.255.255.0
-SERVER_PORT=1194
+POOL=
+SERVER_PORT=1190
 CANONICAL=
 PROTOCOL=udp
 CIPHER="cipher AES-256-CBC"
@@ -12,7 +12,11 @@ SUBNET="Disable"
 LAN_SUBNET="Disable"
 COMP_LZO="comp-lzo adaptive"
 IPP="ipp.txt"
-DHCP_1="dhcp-option DNS"
+DNS_1="dhcp-option DNS"
+DNS_2=""
+DNS_3=""
+WINS=""
+DOMAIN="tower.local"
 TELNET_CONSOLE="No"
 VERB="verb 3"
 IP_PORT_SHARE=""
