--- a/default_ec.cfg
+++ b/default_ec.cfg
@@ -12,8 +12,8 @@ LAN_SUBNET="Enable"
 COMP_LZO="comp-lzo adaptive"
 IPP="ipp.txt"
 DNS_1="dhcp-option DNS"
-DNS_2=""
-DNS_3=""
+DNS_2="dhcp-option DNS"
+DNS_3="dhcp-option DNS"
 WINS=""
 DOMAIN=""
 TELNET_CONSOLE="No"
