--- a/openvpnserver/openvpnserver.cfg
+++ b/openvpnserver/openvpnserver.cfg
@@ -4,15 +4,15 @@ POOL=""
 SERVER_PORT=1190
 CANONICAL=
 PROTOCOL=udp
-CIPHER="cipher AES-256-CBC"
-CLIENT=""
-HASH_ALGO="auth sha512"
-GATEWAY="redirect-gateway def1"
-SUBNET="Disable"
-LAN_SUBNET="Disable"
+CIPHER="cipher AES-256-GCM"
+CLIENT="Enable"
+HASH_ALGO=""
+GATEWAY="Disable"
+SUBNET="topology subnet"
+LAN_SUBNET="Enable"
 COMP_LZO="comp-lzo adaptive"
 IPP="ipp.txt"
-DNS_1="dhcp-option DNS"
+DNS_1="GOOGLE"
 DNS_2=""
 DNS_3=""
 WINS=""
@@ -20,4 +20,5 @@ DOMAIN="tower.local"
 TELNET_CONSOLE="No"
 VERB="verb 3"
 IP_PORT_SHARE=""
-TLSENCRYPT="tls-crypt"
+TLSENCRYPT="tls-auth"
+
