--- a/openvpnserver/openvpnserver_cert.cfg
+++ b/openvpnserver/openvpnserver_cert.cfg
@@ -1,8 +1,16 @@
 # openvpnserver plugin configuration file for the certs
-PASSPHRASE="unraid"
-INSTALL_ON_BOOT="enable"
-EASYRSAKEYSIZE="2048"
-DISCONNECT_ON_UMOUNT="no"
+EASYRSAREQCOUNTRY="US"
+EASYRSAREQPROVINCE="California"
+EASYRSAREQCITY="San Francisco"
+EASYRSAREQORG="Copyleft Certificate Co"
+EASYRSAREQEMAIL="me@example.net"
+EASYRSAREQOU="My Organizational Unit"
 CRYPTO=rsa
 CURVE=
+EASYRSAKEYSIZE=4096
+PASSPHRASE="unraid"
+EASYRSACAEXPIRE=3650
+EASYRSACERTEXPIRE=825
+INSTALL_ON_BOOT="enable"
+DISCONNECT_ON_UMOUNT="no"
 SERVER_PATH=/boot/config/openvpnserver
